# tiny-c-compiler

./: .gitignore  CMakeLists.txt  README.md  build.bat
.cache/clangd/index/: gen.c.9D3F097EADA08243.idx  lex.c.C5639C791DCF30E0.idx  parse.c.14A8438A4C1B89EC.idx  pe.c.F6D1A526A519B214.idx  section.c.60F8D89A0944C935.idx  sym.c.F9DA2D7CD2A0E3D0.idx  tcc.c.6C2CAEDBCB77C25E.idx  tcc.h.3F42908C80FC744B.idx  utils.c.B82281E453AEE15D.idx  x86_64-gen.c.12DA620FFBA2290A.idx
src/: gen.c  lex.c  parse.c  pe.c  section.c  sym.c  tcc.c  tcc.h  utils.c  x86_64-gen.c
tests/: test_arithmetic.c  test_compound.c  test_for.c  test_func_args.c  test_func_simple.c  test_if.c  test_multiply.c  test_negation.c  test_while.c
